--- a/client/src/components/IntroductionCard.css
+++ b/client/src/components/IntroductionCard.css
@@ -1,44 +1,114 @@
-.introduction-container {
+.dev-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid red
+    font-size: 17px;
+    margin-top: 10%;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
-.introduction-info {
+.dev-info {
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     margin-top: 20px;
-    border: 1px solid red;
-    margin-right: 5%;
+
+    max-width: 55%;
+    margin-bottom: 30px;
 }
 
-.introduction-info-background {
-    border: 2px solid grey;
-    height: 400px;
-
-    border-radius: 60% 60% 60% 60% / 60% 60% 10% 10%;
-    /* -webkit-animation: morph 8s ease-in-out infinite;
-    animation: morph 8s ease-in-out infinite;
-    transition: all 1s ease-in-out infinite; */
-    border: 1px solid red
+.dev-info > * {
+    width: 100%;
+    margin-bottom: 15px;
 }
 
-.introduction-info-profile-picture {
+.dev-info-title {
+    font-size: 4rem;
+    line-height: 100%;
+    transition: all 1s ease-in-out;
+}
+
+.dev-info-description {
+    line-height: 20px;
+    width: 90%;
+}
+
+.dev-background {
+    height: 25rem;
+    width: 25rem;
+    border: none;
+    transition: all 1s ease-in-out;
+}
+
+.dev-picture {
     width: 100%;
     height: 100%;
-    border-radius: 60% 60% 20% 20% / 60% 60% 10% 10%;
-    background-size: cover;
-    border: 1px solid red
+
+    object-fit: cover;
+    -webkit-animation: revertPortrait 8s ease-in-out infinite;
+    animation: revertPortrait 8s ease-in-out infinite;
+
+    border: 3px solid black;
 }
 
 .icon {
     cursor: pointer;
-    border: 1px solid red
 }
 
-.introduction-info {
-    max-width: 40%;
-    margin-bottom: 30px;
-    border: 1px solid red
+@keyframes revertPortrait {
+    0% {
+        border-radius: 60% 60% 60% 60% / 60% 60% 10% 10%;
+    }
+
+    25% {
+        border-radius: 80% 80% 40% 40% / 80% 80% 40% 40%;
+    }
+
+    50% {
+        border-radius: 40% 40% 40% 40% / 40% 40% 40% 40%;
+    }
+
+    75% {
+        border-radius: 80% 80% 40% 40% / 80% 80% 40% 40%;
+    }
+
+    100% {
+        border-radius: 60% 60% 60% 60% / 60% 60% 10% 10%;
+    }
+}
+
+@media (max-width: 950px) {
+    .dev-container {
+        flex-direction: column-reverse;
+        gap: 3rem;
+    }
+
+    .dev-container > * {
+        align-items: center;
+    }
+
+    .dev-info {
+        min-width: 55%;
+        width: 100%;
+    }
+
+    .dev-info-contacts {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
+@media (max-width: 600px) {
+    .dev-background {
+        height: 15rem;
+        width: 15rem;
+        border: none;
+    }
+
+    .dev-info-title {
+        font-size: 2.5rem;
+    }
 }
