Finished partially the about me section

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -27,7 +27,7 @@ body::-webkit-scrollbar-button {
 }
 
 .icon {
-    margin-left: 20px;
+    margin-right: 20px;
     font-size: 35px;
     transition: font-size 0.3s ease;
 }
