--- a/client/src/components/AboutMe.css
+++ b/client/src/components/AboutMe.css
@@ -1,4 +1,85 @@
 .about-container {
-    height: 400px;
-    background-color: #D4A5A5;
+    height: 80vh;
+    background-color: #afb4b7;
+
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.about-info {
+    width: 60%;
+    max-width: 50%;
+}
+
+.about-intro {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: blue;
+    transition: all 0.5s ease-in-out;
+}
+
+.about-info > * {
+    transition: all 0.5s ease-in-out;
+}
+
+.about-title {
+    height: 15vh;
+}
+
+.about-description {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+}
+
+.about-background {
+    width: 40%;
+}
+
+.about-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+
+    transition: all 0.5s ease-in-out;
+}
+
+@media (max-width: 1170px) {
+    .about-container {
+        flex-direction: column-reverse;
+    }
+    .about-container > * {
+        min-width: 50%;
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 950px) {
+    .about-intro {
+        font-size: 1rem;
+    }
+
+    .about-title {
+        font-size: 1.4rem;
+        height: 10vh;
+    }
+
+    .about-description {
+        font-size: 1rem;
+        line-height: 1.25rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .about-intro {
+        font-size: 1rem;
+    }
+
+    .about-title {
+        font-size: 1.4rem;
+    }
+
+    .about-description {
+       width: 100%;
+    }
 }
