--- a/client/src/components/IntroductionCard.css
+++ b/client/src/components/IntroductionCard.css
@@ -1,9 +1,17 @@
+.dev-introduction {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 104vh;
+
+}
+
 .dev-container {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 17px;
-    margin-top: 10%;
+    margin: 5% 0;
     flex-wrap: wrap;
     width: 100%;
 }
@@ -101,7 +109,7 @@
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 725px) {
     .dev-background {
         height: 15rem;
         width: 15rem;
