--- a/client/src/components/Skills.css
+++ b/client/src/components/Skills.css
@@ -1,19 +1,28 @@
 .skills-container {
-    display: flex;
-    align-items: center;
-
     width: 100%;
     margin-top: 25px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .skills-title {
-    width: 20%;
     font-size: 1.5rem;
-    margin-left: 330px;
 }
 
 .skills-list {
-    width: 90%;
-    margin-left: 50px;
+    list-style: none;
+}
+
+@media (max-width: 900px) {
+    .skills-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .skills-list {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
