--- a/client/src/components/ContactMe.css
+++ b/client/src/components/ContactMe.css
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: #afb4b7;
+
 }
 
 .contact-container > * {
