--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,15 +1,15 @@
 .nav-container {
     width: 100%;
-    height: 100px;
-    
+    height: 100%;
+
     display: flex;
     justify-content: space-between;
     box-shadow: 0px 1px 5px gray;
-    
+
     top: 0;
     z-index: 999;
     position: sticky;
-    
+
     background-color: white;
 }
 
@@ -17,7 +17,7 @@
     width: 60%;
     padding: 30px 0;
     margin-left: 5%;
-    
+
     font-size: 2rem;
 }
 
@@ -27,7 +27,6 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
 
     list-style: none;
     cursor: pointer;
