--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -14,11 +14,15 @@
 }
 
 .nav-show {
+    content: attr(data-text);
+
     width: 60%;
     padding: 30px 0;
     margin-left: 5%;
 
     font-size: 2rem;
+    -webkit-animation: presentationMove 4s ease-in-out infinite;
+    animation: presentationMove 4s ease-in-out infinite;
 }
 
 .nav-list {
@@ -44,4 +48,16 @@
 .nav-list > *:hover {
     border: 1px solid gray;
     padding: 10px 20px;
+}
+
+@keyframes presentationMove {
+    0% {
+        transform: scale(1) translate(0, 0) rotate(0) skew(0);
+    }
+    50% {
+        transform: scale(1.05) translate(30px, -80px) rotate(-0.25deg) skew(10deg, -10deg);
+    }
+    100% {
+        transform: scale(1) translate(0, 0) rotate(0) skew(0);
+    }
 }
