--- a/client/src/components/AboutMe.css
+++ b/client/src/components/AboutMe.css
@@ -1,5 +1,5 @@
 .about-container {
-    height: 80vh;
+    height: 85vh;
     background-color: #afb4b7;
 
     display: flex;
@@ -44,13 +44,40 @@
     transition: all 0.5s ease-in-out;
 }
 
-@media (max-width: 1170px) {
+
+@media (max-width: 1060px) {
     .about-container {
         flex-direction: column-reverse;
     }
     .about-container > * {
         min-width: 50%;
         max-width: 100%;
+    }
+
+    .about-description {
+        font-size: 1rem;
+        line-height: 1.25rem;
+    }
+
+    .about-title {
+        font-size: 1.25rem;
+
+        height: 7vh;
+    }
+}
+
+@media (max-width: 980px) {
+    .about-container {
+        flex-direction: column-reverse;
+    }
+    .about-container > * {
+        min-width: 50%;
+        max-width: 100%;
+    }
+
+    .about-description {
+        font-size: 1rem;
+        line-height: 1.25rem;
     }
 }
 
@@ -61,6 +88,17 @@
 
     .about-title {
         font-size: 1.4rem;
+        height: 10vh;
+    }
+}
+
+@media (max-width: 650px) {
+    .about-intro {
+        font-size: 1rem;
+    }
+
+    .about-title {
+        font-size: 1.2rem;
         height: 10vh;
     }
 
@@ -76,10 +114,11 @@
     }
 
     .about-title {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
 
     .about-description {
-       width: 100%;
+        width: 100%;
+        font-size: 0.8rem;
     }
 }
