--- a/client/src/components/ContactMe.css
+++ b/client/src/components/ContactMe.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: center;
     background-color: #afb4b7;
-
 }
 
 .contact-container > * {
@@ -25,6 +24,9 @@
 .contact-additional {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+
+    transition: all 0.6s ease-in-out;
 }
 
 .contact-additional > * {
@@ -34,4 +36,24 @@
 .link {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 1000px) {
+    * {
+        font-size: 15px;
+    }
+    .contact {
+        font-size: 20px;
+    }
+    .contact-title {
+        height: 5vh;
+    }
+}
+
+
+@media (max-width: 500px) {
+    .contact-additional {
+        display: block;
+        margin: 0;
+    }
 }
