--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -4,9 +4,10 @@
     color: white;
     font-size: 1.2rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-weight: bold;
     bottom: 0;
     z-index: 999;
+    flex-wrap: wrap;
 }
