--- a/client/src/components/IntroductionCard.css
+++ b/client/src/components/IntroductionCard.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: flex-start;
     height: 104vh;
-
 }
 
 .dev-container {
@@ -88,6 +87,9 @@
 }
 
 @media (max-width: 950px) {
+    .dev-introduction {
+        height: 120vh;
+    }
     .dev-container {
         flex-direction: column-reverse;
         gap: 3rem;
