--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -1,4 +1,4 @@
-.project-container {
+.slider-child {
     overflow: hidden;
 }
 
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .project-title {
-    height: 15vh;
+    height: 5vh;
 }
 
 .project-description {
@@ -55,7 +55,7 @@
 }
 
 .project-background {
-    width: 40%;
+    max-width: 30%;
 }
 
 .project-img {
@@ -67,12 +67,21 @@
 }
 
 @media (max-width: 1170px) {
-    .project-container {
+    .project-item {
         flex-direction: column-reverse;
+        width: 100%;
+        justify-content: none;
     }
-    .project-container > * {
+    .project-item > * {
         min-width: 50%;
-        max-width: 100%;
+        margin-top: 50px;
+    }
+
+    .project-img {
+        width: 100%;
+        object-fit: cover;
+
+        transition: all 0.5s ease-in-out;
     }
 }
 
@@ -83,7 +92,7 @@
 
     .project-title {
         font-size: 1.4rem;
-        height: 10vh;
+        height: 3vh;
     }
 
     .project-description {
@@ -98,10 +107,11 @@
     }
 
     .project-title {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
 
     .project-description {
         width: 100%;
+        font-size: 0.8rem;
     }
 }
