--- a/client/src/main.css
+++ b/client/src/main.css
@@ -8,9 +8,11 @@
 
 body {
     height: 100vh;
+    width: 105%;
     scrollbar-width: thin;
     scrollbar-color: #4d7fff #ddd;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
