--- a/client/src/components/ContactMe.css
+++ b/client/src/components/ContactMe.css
@@ -1,9 +1,9 @@
 .contact-container {
-    height: 40vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    background-color: #afb4b7;
+    justify-content: space-evenly;
+    background-image: linear-gradient(to right, #f5f5f5, #e0e0e0);
 }
 
 .contact-container > * {
@@ -18,7 +18,7 @@
 
 .contact-title {
     font-weight: bold;
-    height: 10vh;
+    height: 20vh;
 }
 
 .contact-additional {
@@ -46,14 +46,20 @@
         font-size: 20px;
     }
     .contact-title {
-        height: 5vh;
+        height: 15vh;
+        font-size: 25px;
     }
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .contact-additional {
         display: block;
         margin: 0;
+    }
+
+    .contact-title {
+        height: 1vh;
+        font-size: 20px;
     }
 }
