--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -1,5 +1,10 @@
 .slider-child {
     overflow: hidden;
+    height: 100vh;
+}
+
+.project-container {
+    width: 100vw;
 }
 
 .project-item {
@@ -14,6 +19,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .project-info {
