--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -80,18 +80,24 @@
 
 @media (max-width: 1050px) {
     .nav-list {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        left: 0;
+        height: 100vh;
         width: 100%;
-        background-color: white;
+        
+        top: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        
+        position: absolute;
         z-index: 1;
+        background-color: white;
+        display: none;
+        flex-direction: start;
     }
     .nav-icon {
         display: block;
-        margin-right: 5%;
+        margin-right: 10%;
+        z-index: 3;
     }
     .nav-list.active {
         display: flex;
