Found a bug because default arrows from the slider were not disabled, and the page wasn't fully occupying the width because of it. Bug fixed

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -7,8 +7,8 @@
 }
 
 body {
-    height: 100vh;
-    width: 105%;
+    min-height: 100vh;
+    min-width: 100%;
     scrollbar-width: thin;
     scrollbar-color: #4d7fff #ddd;
     padding: 0;
