--- a/client/src/components/Projects.css
+++ b/client/src/components/Projects.css
@@ -69,9 +69,8 @@ button.slick-arrow:before {
 }
 
 .project-img {
-    height: 100%;
+    height: 300px;
     width: 100%;
-    object-fit: cover;
 
     transition: all 0.5s ease-in-out;
 }
@@ -88,9 +87,7 @@ button.slick-arrow:before {
     }
 
     .project-img {
-        width: 100%;
-        object-fit: cover;
-
+        height: 300px;
         transition: all 0.5s ease-in-out;
     }
 }
