--- a/client/src/components/IntroductionCard.css
+++ b/client/src/components/IntroductionCard.css
@@ -128,3 +128,12 @@
         font-size: 2.5rem;
     }
 }
+
+@media (max-width: 400px) {
+
+    .dev-background {
+        height: 15rem;
+        width: 15rem;
+        border: none;
+    }
+}
