--- a/client/src/components/AboutMe.css
+++ b/client/src/components/AboutMe.css
@@ -47,6 +47,7 @@
 
 
 @media (max-width: 1100px) {
+    
     .about-container {
         flex-direction: column-reverse;
     }
@@ -68,6 +69,7 @@
 }
 
 @media (max-width: 980px) {
+
     .about-container {
         flex-direction: column-reverse;
     }
@@ -83,6 +85,7 @@
 }
 
 @media (max-width: 950px) {
+
     .about-intro {
         font-size: 1rem;
     }
@@ -94,6 +97,7 @@
 }
 
 @media (max-width: 650px) {
+
     .about-intro {
         font-size: 1rem;
     }
@@ -101,6 +105,8 @@
     .about-title {
         font-size: 1.2rem;
         height: 10vh;
+        margin-bottom: 3rem;
+
     }
 
     .about-description {
@@ -110,11 +116,8 @@
 }
 
 @media (max-width: 480px) {
-    .about-intro {
-        font-size: 1rem;
-    }
 
-    .about-title {
+    .about-intro {
         font-size: 1rem;
     }
 
@@ -123,3 +126,12 @@
         font-size: 0.8rem;
     }
 }
+
+
+@media (max-width: 350px) {
+
+    .about-title {
+        font-size: 1rem;
+    }
+}
+
